--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html> # Define o tipo de documento como HTML5
+<!DOCTYPE html> 
 
-<html lang="pt"> # Define o atributo de idioma como "pt" (Português) 
+<html lang="pt"> 
 
-<head> #  Inicia a seção do cabeçalho do documento HTML
-    <meta charset="UTF-8">  # Define a codificação de caracteres do documento como UTF-8, que suporta uma ampla gama de caracteres.
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> # Define que a largura da janela de exibição deve ser igual à largura do dispositivo
-    <title>Apresentação Pessoal</title> # Define o título da página
-</head> # Fecha a seção do cabeçalho do documento HTML 
+<head> 
+    <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="style.css" />
+    <title>Apresentação Pessoal</title> 
+</head> 
 
-<body> # Inicia a seção do corpo do documento HTML, que contém todo o conteúdo visível da página, como texto, imagens, vídeos, etc.
-</body> # Fecha a seção do corpo do documento HTML.
+<body> 
+</body> 
 
-</html> # Fecha o elemento raiz HTML, indicando o fim do documento HTML.
+</html> 
