--- a/index.html
+++ b/index.html
@@ -6,10 +6,289 @@
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="style.css" />
-    <title>Apresentação Pessoal</title> 
+    <title>Ana Palloma</title> 
 </head> 
 
 <body> 
+    
+    <section class="home" id="home">
+        <div class="who-am-i">
+          <p class="presentation">Olá mundo, sou eu.</p>
+          <h1>Ana Palloma Rocha.</h1>
+          <p class="presentation2">
+            Eu sou
+            <span class="typing-effect-span"> </span>
+          </p>
+          <svg xmlns="http://www.w3.org/2000/svg" 
+            width="32" 
+            height="32" 
+            viewBox="0 0 16 16">
+            <path fill="#34d399" d="M7 7v7H0V6.9c0-4.8 4.5-5.4 4.5-5.4l.6 1.4s-2 .3-2.4 1.9C2.3 6 3.1 7 3.1 7H7zm9 0v7H9V6.9c0-4.8 4.5-5.4 4.5-5.4l.6 1.4s-2 .3-2.4 1.9c-.4 1.2.4 2.2.4 2.2H16z"/></svg>
+          <p class="what-i-do">
+            Não somos <b>responsáveis</b> apenas pelo que fazemos. Mas, também, pelo que deixamos de fazer.
+          </p>
+          <div class="social-media">
+            <a href="https://github.com/anapalloma" target="_blank">
+              <svg
+                width="35px"
+                height="35px"
+                viewBox="0 0 48 48"
+                version="1.1"
+                id="Shopicons"
+                xmlns="http://www.w3.org/2000/svg"
+                x="0"
+                y="0"
+                xml:space="preserve"
+                fill="rgb(52 211 153)"
+              >
+                <g id="SVGRepo_bgCarrier" stroke-width="0" />
+  
+                <g
+                  id="SVGRepo_tracerCarrier"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+  
+                <g id="SVGRepo_iconCarrier">
+                  <g
+                    id="github_00000178918564504449926280000008731996709616696990_"
+                  >
+                    <path d="M0 .011h48v48H0v-48z" fill="none" />
+                    <path
+                      d="M30 44.004v-10c0-.884-.197-1.722-.542-2.479.825-.167 1.65-.358 2.472-.601 2.527-.746 6.154-3.839 7.226-6.863 1.188-3.356 1.188-6.76 0-10.116l-.001-.001c-.213-.603-.537-1.211-.998-1.868.848-3.154.253-5.792.225-5.915l-.365-1.564-1.606.019c-.15.002-3.48.063-6.724 1.955a29.635 29.635 0 0 0-11.371 0c-3.243-1.892-6.573-1.953-6.724-1.955l-1.608-.019-.365 1.564c-.028.123-.623 2.761.225 5.915-.461.657-.785 1.266-.999 1.869-1.187 3.356-1.187 6.76.001 10.117 1.07 3.023 4.697 6.116 7.225 6.862.822.243 1.647.434 2.472.601A5.946 5.946 0 0 0 18 34.004v1.281c-.062.036-.127.065-.187.108-.289.211-2.869 1.967-5.505.09-.93-.946-1.386-1.639-1.826-2.309-.988-1.5-1.841-2.586-4.588-3.96a2 2 0 1 0-1.789 3.579c1.991.995 2.341 1.525 3.035 2.581.515.781 1.155 1.754 2.445 3.044l.215.186c1.692 1.27 3.447 1.723 5.053 1.723A9.286 9.286 0 0 0 18 39.76v4.253l12-.009z"
+                    />
+                  </g>
+                </g>
+              </svg>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/anapalloma"
+              target="_blank"
+            >
+              <svg
+                fill="rgb(52 211 153)"
+                version="1.1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="35px"
+                height="35px"
+                viewBox="0 0 512 512"
+                xml:space="preserve"
+              >
+                <g id="7935ec95c421cee6d86eb22ecd125aef">
+                  <path
+                    style="
+                      display: inline;
+                      fill-rule: evenodd;
+                      clip-rule: evenodd;
+                    "
+                    d="M116.504,500.219V170.654H6.975v329.564H116.504
+                          L116.504,500.219z M61.751,125.674c38.183,0,61.968-25.328,61.968-56.953c-0.722-32.328-23.785-56.941-61.252-56.941
+                          C24.994,11.781,0.5,36.394,0.5,68.722c0,31.625,23.772,56.953,60.53,56.953H61.751L61.751,125.674z M177.124,500.219
+                          c0,0,1.437-298.643,0-329.564H286.67v47.794h-0.727c14.404-22.49,40.354-55.533,99.44-55.533
+                          c72.085,0,126.116,47.103,126.116,148.333v188.971H401.971V323.912c0-44.301-15.848-74.531-55.497-74.531
+                          c-30.254,0-48.284,20.38-56.202,40.08c-2.897,7.012-3.602,16.861-3.602,26.711v184.047H177.124L177.124,500.219z"
+                  ></path>
+                </g>
+              </svg>
+            </a>
+    
+            <div class="vertical-line"></div>
+          </div>
+          <a href="./Assets/Ana_Palloma_Resume.pdf" target="_blank"
+            ><button type="button" class="btn">Veja meu currículo</button></a
+          >
+        </div>
+        <div class="avatar-container">
+          <img class="avatar" src="./Assets/my-avatar.png" alt="Avatar" />
+        </div>
+      </section>
+      <section id="about-me" class="about-me-container">
+        <div class="about-title">
+          <div class="title-line"></div>
+          <h2>Sobre mim</h2>
+          <div class="title-line"></div>
+        </div>
+        <div class="about-me">
+          <ul class="function-container">
+            <li class="function1 func" id="function1" onclick="showFunction1()">
+              QuemSouEu ()
+            </li>
+            <li class="function2 func" id="function2" onclick="showFunction2()">
+              Educacao ()
+            </li>
+            <li class="function3 func" id="function3" onclick="showFunction3()">
+              Certificados ()
+            </li>
+            <li class="function4 func" id="function4" onclick="showFunction4()">
+              Skills ()
+            </li>
+          </ul>
+  
+          <div class="function-info-container">
+            <p class="function-info info1" id="info1">
+              <span class="acolade">{</span><br />
+              <span class="variable">const</span>
+              <span class="identifiant">nome</span> =
+              <span class="content-string">'Ana Palloma'</span>;<br />
+              <span class="variable">const</span>
+              <span class="identifiant">email</span> =<span class="content-string"
+                >'anapallomarocha@gmail.com'</span
+              >;<br />
+              <span class="variable">let</span>
+              <span class="identifiant">idadeEmSegundos</span> =
+              <span class="content-nbr">976056000</span>;<br />
+              <span class="comment"
+                >/* Sou apaixonada por desenvolvimento web, inteligência artificial, internet das coisas (IoT).<br />
+                Também adoro cuidar de plantas :) */</span
+              ><br />
+              <span class="acolade">}</span>
+            </p>
+  
+            <p class="function-info info2" id="info2">
+              <span class="acolade">{</span><br />
+              <span class="comment"
+                >/* Em primeiro lugar, não se trata de diplomas.<br />
+                É sobre suas habilidades, sua criatividade e você mesmo :) */</span
+              ><br />
+              <span class="variable">this</span>.<span class="identifiant"
+              >cursoTecnico</span
+            >
+            = <span class="content-nbr">true</span>;<br />
+              <span class="variable">this</span>.<span class="identifiant"
+                >bacharelado</span
+              >
+              = <span class="content-nbr">true</span>;<br />
+              <span class="variable">this</span>.<span class="identifiant"
+                >especializacao</span
+              >
+              = <span class="content-nbr">true</span>;<br />
+              <span class="variable">this</span>.<span class="identifiant"
+                >mestradoAcademico</span
+              >
+              = <span class="content-nbr">true</span>;<br />
+              <span class="variable">this</span>.<span class="identifiant"
+                >onload</span
+              >
+              = <span class="content-string">'Microverso'</span>;<br />
+              <span class="acolade">}</span>
+            </p>
+  
+            <p class="function-info info3" id="info3">
+              <span class="acolade">{</span><br />
+              <span class="variable">let</span>
+              <span class="identifiant">uxDesign</span> =
+              <a
+                href="https://www.dio.me/certificate/A08E6DC5/share"
+                class="content-string"
+                >'Checar certificado'</a
+              >;<br />
+
+              <span class="variable">let</span>
+              <span class="identifiant">trabalhandoEmEquipesAgeis</span> =
+              <a
+                href="https://www.dio.me/certificate/4E1142C9/share"
+                class="content-string"
+                >'Checar certificado'</a
+              >;<br />
+
+              <span class="variable">let</span>
+              <span class="identifiant">javaScript</span> =
+              <a
+                href="https://www.linkedin.com/learning/certificates/b8ca2c7274405e28f6b8ee45125e704ba0fba4296ed25a46f208840db332f562?trk=backfilled_certificate"
+                class="content-string"
+                >'Checar certificado'</a
+              >;<br />
+
+              <span class="variable">let</span>
+              <span class="identifiant">principiosDeDesenvolvimentoDeSoftware</span> =
+              <a
+                href="https://www.dio.me/certificate/F4C3E8EC/share"
+                class="content-string"
+                >'Checar certificado'</a
+              >;<br />
+
+              <span class="variable">let</span>
+              <span class="identifiant">integracaoComPythonEFrameworks</span>
+              =
+              <a
+                href="https://www.dio.me/certificate/58235298/share"
+                class="content-string"
+                >'Checar certificado'</a
+              >;<br />
+  
+              <span class="variable">let</span>
+              <span class="identifiant">programacaoOrientadaAObjetosComPython</span> =
+              <a
+                href="https://www.dio.me/certificate/B29B0CA0/share"
+                class="content-string"
+                >'Checar certificado'</a
+              >;<br />
+
+              <span class="variable">let</span>
+              <span class="identifiant">pythonFundamentosParaAnaliseDeDados</span> =
+              <a
+                href="https://mycourse.app/BUHpSq4oj2MABSMc9"
+                class="content-string"
+                >'Checar certificado'</a
+              >;<br />
+
+              <span class="comment"
+                >// Uma crise destrói um herança, mas não uma profissão :) ..</span
+              ><br />
+              <span class="acolade">}</span><br />
+            </p>
+  
+            <p class="function-info info4" id="info4">
+              <span class="acolade">{</span><br />
+              <span class="comment"
+                >/* Cada dia é uma oportunidade para aprender algo novo... ;) */</span
+              ><br />
+              <span class="variable">let</span>
+              <span class="identifiant">FrontEnd</span> =
+              <span class="content-nbr">[</span
+              ><span class="content-string"
+                >'HTML5', 'CSS3', 'JavaScript', 'React',</span
+              ><span class="content-nbr">];</span>
+              <br />
+              <span class="variable">let</span>
+              <span class="identifiant">BackEnd</span> =
+              <span class="content-nbr">[</span
+              ><span class="content-string"
+                >'Python', 'PHP', 'C#','MySQL', 'PostgreSQL'</span
+              ><span class="typing-effect-span te-array"> </span>
+              <span class="content-nbr"> ];</span><br />
+              <br />
+              <span class="variable">let</span>
+              <span class="identifiant">Ferramentas</span> =
+              <span class="content-nbr">[</span
+              ><span class="content-string"
+                >'Git', 'GitHub', 'Visual Studio Code', 'Bootstrap'</span
+              ><span class="typing-effect-span te-array"></span>
+              <span class="content-nbr">];</span><br />
+              <br />
+              <span class="variable">let</span>
+              <span class="identifiant">Profissional</span> =
+              <span class="content-nbr">[</span
+              ><span class="content-string"
+                >'Metodologias ágeis', 'Programação em pares', 'Trabalho em equipe',
+                'Mentoria', 'Boa comunicação', 'Colaboração remota','Resolução de problemas e pensamento crítico'
+              </span
+              ><span class="typing-effect-span te-array"> </span>
+              <span class="content-nbr"> ];</span><br />
+              <span class="acolade">}</span>
+            </p>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <p>Todas as opiniões expressas neste site são exclusivamente minhas.</p>
+        <br/> 
+        <br/>
+      </footer>
+
+      <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
+      <script src="./index.js"></script>
 </body> 
 
 </html> 
